[package]
name = "gfxfunc"
version = "0.0.1"
authors = ["Eduard Bopp <eduard.bopp@aepsil0n.de>"]

[dependencies]
gfx = "*"

[dev-dependencies]
gfx_device_gl = "*"
glutin = "*"
carboxyl = "0.0.11"

[dev-dependencies.carboxyl_window]
git = "https://github.com/aepsil0n/carboxyl_window"

[dev-dependencies.pistoncore-window]
git = "https://github.com/PistonDevelopers/window"

[dev-dependencies.pistoncore-input]
git = "https://github.com/PistonDevelopers/input"

[dev-dependencies.shader_version]
git = "https://github.com/PistonDevelopers/shader_version"

[dev-dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window"
